# bevy_firework

./: Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: dry_run.yaml
assets/shaders/: instancing.wgsl
examples/: collision.rs  on_demand.rs  one_shot.rs  pbr.rs  pbr_no_msaa.rs  sparks.rs  stress_test.rs  stress_test_collision.rs  textures.rs
src/: core.rs  curve.rs  emission_shape.rs  lib.rs  particles.wgsl  plugin.rs  render.rs
